--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "dependencies": {
         "bootstrap": "4.3.1",
         "jquery": "3.5.0"
+        "minimist": "1.2.3"
+        "kind-of": "6.0.3"
     },
     "devDependencies": {
         "browser-sync": "2.26.7",
